--- a/Kernel/Makefile
+++ b/Kernel/Makefile
@@ -8,14 +8,16 @@ SOURCES_DRIVERS=$(wildcard drivers/*.c)
 SOURCES_IDT=$(wildcard idt/*.c)
 SOURCES_ASM=$(wildcard asm/*.asm)
 SOURCES_UTILS=$(wildcard utils/*.c)
+SOURCES_TEST=$(wildcard test/*.c)
 
 OBJECTS=$(SOURCES:.c=.o)
 OBJECTS_DRIVERS=$(SOURCES_DRIVERS:.c=.o)
 OBJECTS_IDT=$(SOURCES_IDT:.c=.o)
 OBJECTS_ASM=$(SOURCES_ASM:.asm=.o)
 OBJECTS_UTILS=$(SOURCES_UTILS:.c=.o)
+OBJECTS_TEST=$(SOURCES_TEST:.c=.o)
 
-ALL_OBJECTS= $(OBJECTS) $(OBJECTS_DRIVERS) $(OBJECTS_IDT) $(OBJECTS_ASM) $(OBJECTS_UTILS)
+ALL_OBJECTS= $(OBJECTS) $(OBJECTS_DRIVERS) $(OBJECTS_IDT) $(OBJECTS_ASM) $(OBJECTS_UTILS) $(OBJECTS_TEST)
 
 
 LOADERSRC=loader.asm
