Big refactor trying to fix syscalls and std functions (TODO make it work) Co-authored-by: Felipe Venturino <feliventu@users.noreply.github.com>

--- a/Userland/Makefile
+++ b/Userland/Makefile
@@ -5,13 +5,13 @@ SAMPLE_DATA=0001-sampleDataModule.bin
 all: utilsModule sampleDataModule
 
 utilsModule:
-	cd utils; make
+	cd UserCodeModule; make
 
 sampleDataModule:
 	printf "This is sample data." >> $(SAMPLE_DATA) && dd if=/dev/zero bs=1 count=1 >> $(SAMPLE_DATA)
 
 clean:
-	cd utils; make clean
+	cd UserCodeModule; make clean
 	rm -rf *.bin
 	rm -rf *.elf
 
