--- a/Kernel/Makefile
+++ b/Kernel/Makefile
@@ -9,6 +9,7 @@ SOURCES_IDT=$(wildcard idt/*.c)
 SOURCES_ASM=$(wildcard asm/*.asm)
 SOURCES_UTILS=$(wildcard utils/*.c)
 SOURCES_TEST=$(wildcard test/*.c)
+SOURCES_SHARED= $(wildcard ../Shared/*.c)
 
 OBJECTS=$(SOURCES:.c=.o)
 OBJECTS_DRIVERS=$(SOURCES_DRIVERS:.c=.o)
@@ -16,13 +17,15 @@ OBJECTS_IDT=$(SOURCES_IDT:.c=.o)
 OBJECTS_ASM=$(SOURCES_ASM:.asm=.o)
 OBJECTS_UTILS=$(SOURCES_UTILS:.c=.o)
 OBJECTS_TEST=$(SOURCES_TEST:.c=.o)
+OBJECTS_SHARED= $(SOURCES_SHARED:.c=.o)
 
-ALL_OBJECTS= $(OBJECTS) $(OBJECTS_DRIVERS) $(OBJECTS_IDT) $(OBJECTS_ASM) $(OBJECTS_UTILS) $(OBJECTS_TEST)
+ALL_OBJECTS= $(OBJECTS) $(OBJECTS_DRIVERS) $(OBJECTS_IDT) $(OBJECTS_ASM) $(OBJECTS_UTILS) $(OBJECTS_TEST) 
 
+# Shared source files
 
 LOADERSRC=loader.asm
 LOADEROBJ=$(LOADERSRC:.asm=.o)
-STATICLIBS=
+STATICLIBS=$(OBJECTS_SHARED)
 
 all: $(KERNEL)
 
@@ -30,7 +33,7 @@ $(KERNEL): $(LOADEROBJ) $(STATICLIBS) $(ALL_OBJECTS)
 	$(LD) $(LDFLAGS) -T kernel.ld -o $(KERNEL) $(LOADEROBJ) $(STATICLIBS) $(ALL_OBJECTS)
 
 %.o: %.c
-	$(GCC) $(GCCFLAGS) -I./include -c $< -o $@
+	$(GCC) $(GCCFLAGS) -I./include -I../Shared/include -c $< -o $@
 
 %.o : %.asm
 	$(ASM) $(ASMFLAGS) $< -o $@
@@ -39,6 +42,6 @@ $(LOADEROBJ):
 	$(ASM) $(ASMFLAGS) $(LOADERSRC) -o $(LOADEROBJ)
 
 clean:
-	rm -rf *.bin *.elf *.o drivers/*.o idt/*.o libasm/*.o libc/*.o test/*.o utils/*.o asm/*.o
+	rm -rf *.bin *.elf *.o drivers/*.o idt/*.o libasm/*.o libc/*.o test/*.o utils/*.o asm/*.o ../Shared/*.o
 
 .PHONY: all clean
