Add modularization kernel-user, refactor share library definitions and remove warnings
Co-authored-by: feliventu <feliventurino@gmail.com>

--- a/Userland/UserCodeModule/Makefile
+++ b/Userland/UserCodeModule/Makefile
@@ -7,6 +7,7 @@ SOURCES_EXEC=$(wildcard exec/*.c)
 SOURCES_LIBC=$(wildcard libc/*.c)
 SOURCES_ASM=$(wildcard libasm/*.asm)
 SOURCES_SHARED= $(wildcard ../../Shared/*.c)
+SOURCES_TEST=$(wildcard tests/*.c)
 
 
 OBJECTS=$(SOURCES:.c=.o)
@@ -14,8 +15,9 @@ OBJECTS_EXEC=$(SOURCES_EXEC:.c=.o)
 OBJECTS_LIBC=$(SOURCES_LIBC:.c=.o)
 OBJECTS_ASM=$(SOURCES_ASM:.asm=.o)
 OBJECTS_SHARED= $(SOURCES_SHARED:.c=.o)
+OBJECTS_TEST=$(SOURCES_TEST:.c=.o)
 
-ALL_OBJECTS= $(OBJECTS) $(OBJECTS_ASM) $(OBJECTS_EXEC) $(OBJECTS_LIBC) $(OBJECTS_SHARED)
+ALL_OBJECTS= $(OBJECTS) $(OBJECTS_ASM) $(OBJECTS_EXEC) $(OBJECTS_LIBC) $(OBJECTS_SHARED) $(OBJECTS_TEST)
 
 all: $(MODULE)
 
@@ -34,6 +36,6 @@ clean:
 	@rm -rf exec/*.o
 	@rm -rf libasm/*.o
 	@rm -rf libc/*.o
-	
+	@rm -rf tests/*.o	
 
 .PHONY: all clean print
