--- a/Userland/UserCodeModule/Makefile
+++ b/Userland/UserCodeModule/Makefile
@@ -1,7 +1,7 @@
 include ../Makefile.inc
 
 # MODULE=0000-sampleCodeModule.bin
-MODULE=0000-userlandCodeModule.bin
+MODULE=userlandCodeModule.bin
 SOURCES=$(wildcard *.c)
 SOURCES_EXEC=$(wildcard exec/*.c)
 SOURCES_LIBC=$(wildcard libc/*.c)
@@ -22,8 +22,8 @@ ALL_OBJECTS= $(OBJECTS) $(OBJECTS_ASM) $(OBJECTS_EXEC) $(OBJECTS_LIBC) $(OBJECTS
 all: $(MODULE)
 
 $(MODULE): $(ALL_OBJECTS)
-	$(LD) $(LDFLAGS) -T userlandCodeModule.ld $(ALL_OBJECTS) -o ../$(MODULE)
-	$(LD) $(LDFLAGS) -T userlandCodeModule.ld --oformat=elf64-x86-64 -o ../0000-userlandCodeModule.elf $^
+	$(GCC) $(GCCFLAGS) -T userlandCodeModule.ld $(ALL_OBJECTS) -o ../$(MODULE)
+	$(GCC) $(GCCFLAGS) -T userlandCodeModule.ld -Wl,--oformat=elf64-x86-64 -o ../userlandCodeModule.elf $^
 
 %.o: %.c
 	$(GCC) $(GCCFLAGS) -I./include -I../../Shared/include -c $< -o $@
@@ -37,5 +37,6 @@ clean:
 	@rm -rf libasm/*.o
 	@rm -rf libc/*.o
 	@rm -rf tests/*.o	
+	@rm -rf ../../Shared/*.o
 
 .PHONY: all clean print
