--- a/Userland/Makefile.inc
+++ b/Userland/Makefile.inc
@@ -7,3 +7,4 @@ ASM=nasm
 GCCFLAGS=-m64 -fno-exceptions -std=c99 -Wall -ffreestanding -nostdlib -fno-common -mno-red-zone -mno-mmx -mno-sse -mno-sse2 -fno-builtin-malloc -fno-builtin-free -fno-builtin-realloc
 ARFLAGS=rvs
 ASMFLAGS=-felf64
+GCCFLAGS+=-g
