--- a/Userland/Makefile.inc
+++ b/Userland/Makefile.inc
@@ -4,7 +4,7 @@ LD=ld
 AR=ar
 ASM=nasm
 
-GCCFLAGS=-m64 -fno-exceptions -std=c99 -Wall -ffreestanding -nostdlib -fno-common -mno-red-zone -mno-mmx -mno-sse -mno-sse2 -fno-builtin-malloc -fno-builtin-free -fno-builtin-realloc -fno-pie
+GCCFLAGS=-m64 -fno-exceptions -std=c99 -Wall -ffreestanding -nostdlib -fno-common -mno-red-zone -mno-mmx -mno-sse -mno-sse2 -fno-builtin-malloc -fno-builtin-free -fno-builtin-realloc
 ARFLAGS=rvs
 ASMFLAGS=-felf64
 GCCFLAGS+=-g
