Refactor structure of kernelside

--- a/Kernel/Makefile
+++ b/Kernel/Makefile
@@ -4,21 +4,35 @@ KERNEL=kernel.bin
 KERNEL_ELF=$(KERNEL:.bin=.elf)
 
 SOURCES=$(wildcard *.c)
-SOURCES_DRIVERS=$(wildcard drivers/*.c)
-SOURCES_IDT=$(wildcard idt/*.c)
+SOURCES_DRIVERS=$(wildcard device/*.c)
+SOURCES_DRIVERS+= $(wildcard device/**/*.c)
+SOURCES_IDT=$(wildcard interrupt/*.c)
+SOURCES_IDT+= $(wildcard interrupt/**/*.c)
+SOURCES_MM=$(wildcard memory/*.c)
+SOURCES_MM+= $(wildcard memory/**/*.c)
+SOURCES_PROCESS=$(wildcard process/*.c)
+SOURCES_PROCESS+= $(wildcard process/**/*.c)
+SOURCES_SYNC=$(wildcard sync/*.c)
+SOURCES_SYNC+= $(wildcard sync/**/*.c)
 SOURCES_ASM=$(wildcard asm/*.asm)
 SOURCES_UTILS=$(wildcard utils/*.c)
-SOURCES_TEST=$(wildcard tests/*.c)
+SOURCES_UTILS+= $(wildcard utils/**/*.c)
+SOURCES_TEST=$(wildcard tests/**/*.c)
+SOURCES_TEST+= $(wildcard tests/*.c)
 SOURCES_SHARED= $(wildcard ../Shared/*.c)
+SOURCES_SHARED += $(wildcard ../Shared/**/*.c)
 
 OBJECTS=$(SOURCES:.c=.o)
 OBJECTS_DRIVERS=$(SOURCES_DRIVERS:.c=.o)
 OBJECTS_IDT=$(SOURCES_IDT:.c=.o)
+OBJECTS_MM=$(SOURCES_MM:.c=.o)
+OBJECTS_PROCESS=$(SOURCES_PROCESS:.c=.o)
+OBJECTS_SYNC=$(SOURCES_SYNC:.c=.o)
 OBJECTS_ASM=$(SOURCES_ASM:.asm=.o)
 OBJECTS_UTILS=$(SOURCES_UTILS:.c=.o)
 OBJECTS_SHARED= $(SOURCES_SHARED:.c=.o)
 
-ALL_OBJECTS= $(OBJECTS) $(OBJECTS_DRIVERS) $(OBJECTS_IDT) $(OBJECTS_ASM) $(OBJECTS_UTILS) 
+ALL_OBJECTS= $(OBJECTS) $(OBJECTS_DRIVERS) $(OBJECTS_IDT) $(OBJECTS_ASM) $(OBJECTS_UTILS) $(OBJECTS_MM) $(OBJECTS_PROCESS) $(OBJECTS_SYNC) $(OBJECTS_TEST)
 
 # Shared source files
 
