include pipes in kernel makefile

--- a/Kernel/Makefile
+++ b/Kernel/Makefile
@@ -12,6 +12,8 @@ SOURCES_MM=$(wildcard memory/*.c)
 SOURCES_MM+= $(wildcard memory/**/*.c)
 SOURCES_PROCESS=$(wildcard process/*.c)
 SOURCES_PROCESS+= $(wildcard process/**/*.c)
+SOURCES_PIPES=$(wildcard pipes/*.c)
+SOURCES_PIPES+= $(wildcard pipes/**/*.c)
 SOURCES_SYNC=$(wildcard sync/*.c)
 SOURCES_SYNC+= $(wildcard sync/**/*.c)
 SOURCES_ASM=$(wildcard asm/*.asm)
@@ -28,11 +30,12 @@ OBJECTS_IDT=$(SOURCES_IDT:.c=.o)
 OBJECTS_MM=$(SOURCES_MM:.c=.o)
 OBJECTS_PROCESS=$(SOURCES_PROCESS:.c=.o)
 OBJECTS_SYNC=$(SOURCES_SYNC:.c=.o)
+OBJECTS_PIPES=$(SOURCES_PIPES:.c=.o)
 OBJECTS_ASM=$(SOURCES_ASM:.asm=.o)
 OBJECTS_UTILS=$(SOURCES_UTILS:.c=.o)
 OBJECTS_SHARED= $(SOURCES_SHARED:.c=.o)
 
-ALL_OBJECTS= $(OBJECTS) $(OBJECTS_DRIVERS) $(OBJECTS_IDT) $(OBJECTS_ASM) $(OBJECTS_UTILS) $(OBJECTS_MM) $(OBJECTS_PROCESS) $(OBJECTS_SYNC) $(OBJECTS_TEST)
+ALL_OBJECTS= $(OBJECTS) $(OBJECTS_DRIVERS) $(OBJECTS_IDT) $(OBJECTS_ASM) $(OBJECTS_UTILS) $(OBJECTS_MM) $(OBJECTS_PROCESS) $(OBJECTS_SYNC) $(OBJECTS_PIPES) $(OBJECTS_TEST)
 
 # Shared source files
 
